--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <img class = "image" id = "img-8"src = "https://images.unsplash.com/photo-1611078295948-10b3961e1e40?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGJyb3dufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" draggable="false">    
       </div>
   </section>
-  <!-- <script src = "scroller.js"></script> -->
+  <script src = "scroller.js"></script>
 </body>
 </html>
